--- a/Projects.Web/web.config
+++ b/Projects.Web/web.config
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-    <system.webServer>
-        <staticContent>
-            <mimeMap fileExtension=".ejs" mimeType="text/html" />
-        </staticContent>
-    </system.webServer>
+  <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".mustache" mimeType="text/plain" />
+    </staticContent>
+  </system.webServer>
 </configuration>
