various front-end updates

--- a/Projects.Web/web.config
+++ b/Projects.Web/web.config
@@ -4,5 +4,6 @@
     <staticContent>
       <mimeMap fileExtension=".mustache" mimeType="text/plain" />
     </staticContent>
+        <caching enabled="false" enableKernelCache="false" />
   </system.webServer>
 </configuration>
