--- a/Projects.Web.Api/Web.config
+++ b/Projects.Web.Api/Web.config
@@ -64,7 +64,7 @@
     <modules runAllManagedModulesForAllRequests="true" />
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*"/>
+        <add name="Access-Control-Allow-Origin" value="*" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
@@ -81,6 +81,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
